test/integration/bad/function-signatures/overloading/no_minimum_promotion2.stan
functions {
   real foo(real x, real y){
     return y;
   }

   real foo(int x, complex y){
     return get_imag(y);
   }
}

model {
   print(foo(1,2));
}
